--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 .container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    background-color: black;
+    text-align: center;
 }
 
 h1 {
@@ -11,7 +10,23 @@ h1 {
     color: white;
 }
 
+h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+    font-size: 42px;
+}
+
 a {
     color: aquamarine;
     font-size: 16px;
+}
+
+p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 21px;
+    color: Gray;
+}
+
+p:last-child {
+    text-align: right;
 }
