--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .container {
     background-color: black;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 h1 {
