--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     margin: 0;
-    padding: 8px;
 }
 
 .container {
@@ -36,5 +35,6 @@ p {
 }
 
 p:last-child {
-    text-align: right;
+    align-self: flex-end;
+    margin: 2px 0px
 }
